--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,48 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+<!doctype html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>{% block title %}Accueil{% endblock %} - Actunews</title>
+    {% block stylesheets %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
+              rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
+              crossorigin="anonymous">
+    {% endblock %}
+</head>
+<body>
+<!-- Menu principal -->
+{% include 'partials/_header.html.twig' %}
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+<!-- Contenu du site -->
+{% block body %}
+    <!-- main>.p-5.mx-auto.text-center>h1.display-4{Bienvenue sur Actunews} -->
+    <main>
+        <!-- Titre de la page -->
+        <div class="p-5 mx-auto text-center">
+            <h1 class="display-4">{% block page_title %}Bienvenue sur Actunews{% endblock %}</h1>
+        </div>
+
+        <!-- Contenu de la page -->
+        <div class="py-5 bg-light">
+            <div class="container">
+            {% include "partials/_notification.html.twig" %}
+            {% block content %}{% endblock %}</div>
+        </div>
+    </main>
+{% endblock %}
+
+<!-- Pied de page -->
+{% include 'partials/_footer.html.twig' %}
+
+<!-- Javascripts -->
+{% block javascripts %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+            crossorigin="anonymous"></script>
+{% endblock %}
+
+</body>
 </html>
