Mise en place de la page d'acceuil, suppression du logo dans la barre de navigation, ajout des deux images dans la page d'acceuil

--- a/public/CSS/Acceuil_non_connecter.css
+++ b/public/CSS/Acceuil_non_connecter.css
@@ -1,6 +1,5 @@
 /* Page Acceuil */
-  /* class de la div des 2 images d'accueil */
-    .images_accueil {
+    .images_accueil { /* class de la div des 2 images d'accueil */
       display: flex;
       justify-content: center;
       text-align: center;
@@ -17,7 +16,7 @@
     }
     /* Contact */
       /* image contact */
-            .contact {
+        .contact {
         width: 50%;
         height: auto;
       }
