--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,50 +1,58 @@
 <!doctype html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block title %}Accueil{% endblock %} - Actunews</title>
-    {% block stylesheets %}
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
-              rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
-              crossorigin="anonymous">
-               <link rel="stylesheet" href="{{ asset('CSS/Footer.css') }}">
-               <link rel="stylesheet" href="{{ asset('CSS/Header.css') }}">
-    {% endblock %}
-</head>
-<body>
-<!-- Menu principal -->
-{% include 'partials/_header.html.twig' %}
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<title>
+			{% block title %}Accueil
+			{% endblock %}
+			- Le monde du rail</title>
+		{% block stylesheets %}
+			{# CSS Bootstrap #}
+			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+			{# Fin CSS Bootstrap #}
+			{# CSS personnalisé #}
+			<link rel="stylesheet" href="{{ asset('CSS/Footer.css') }}"> 
+            <link rel="stylesheet" href="{{ asset('CSS/Header.css') }}">
+		{# Fin CSS Perso #}
+		{% endblock %}
+	</head>
+	<body>
 
-<!-- Contenu du site -->
-{% block body %}
-    <!-- main>.p-5.mx-auto.text-center>h1.display-4{Bienvenue sur Actunews} -->
-    <main>
-        <!-- Titre de la page -->
-        <div class="p-5 mx-auto text-center">
-            <h1 class="display-4">{% block page_title %}Bienvenue sur Actunews{% endblock %}</h1>
-        </div>
+		<!-- Menu principal -->
+		{% include 'partials/_header.html.twig' %}
 
-        <!-- Contenu de la page -->
-        <div class="py-5 bg-light">
-            <div class="container">
-            {% include "partials/_notification.html.twig" %}
-            {% block content %}{% endblock %}</div>
-        </div>
-    </main>
-{% endblock %}
+		<!-- Contenu du site -->
+		{% block body %}
+			<main>
+				<!-- Titre de la page -->
+				<div class="p-5 mx-auto text-center">
+					<h1 class="display-4">
+						{% block page_title %}Bienvenue sur Le Monde du rail
+						{% endblock %}
+					</h1>
+				</div>
 
-<!-- Pied de page -->
-{% include 'partials/_footer.html.twig' %}
+				<!-- Contenu de la page -->
+				<div class="py-5 bg-light">
+					<div class="container">
+						{% include "partials/_notification.html.twig" %}
+						{% block content %}{% endblock %}
+					</div>
+				</div>
+			</main>
+		{% endblock %}
 
-<!-- Javascripts -->
-{% block javascripts %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-            crossorigin="anonymous"></script>
-{% endblock %}
+		<!-- Pied de page -->
+		{% include 'partials/_footer.html.twig' %}
 
-</body>
+		<!-- Javascripts -->
+		{% block javascripts %}
+			{# JS Boostrap #}
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+			{# Fin JS Bootstrap #}
+		{% endblock %}
+
+	</body>
 </html>
