--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #0E2E45;">
   <div class="container-fluid">
-    <a class="navbar-brand text-white" href="#">Le Monde du Rail</a>
+    <a class="navbar-brand text-white" href={{path('acceuil_index')}}>Le Monde du Rail</a>
 
     <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
       <span class="navbar-toggler-icon"></span>
