--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -1,14 +1,14 @@
   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Accueil</a>
+          <a class="nav-link text-white" href={{path('acceuil_index')}}>Accueil</a> {# redirection vers l'acceuil #}
         </li>
-
+{#  #}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown">
             Nos produits
           </a>
           <ul class="dropdown-menu dropdown-menu-dark" style="background-color: #0E2E45;">
-            <li><a class="dropdown-item text-white" href="#">Les matériels roulants</a></li>
+            <li><a class="dropdown-item text-white"href={{path('acceuil_index')}}>Les matériels roulants</a></li>
             <li><a class="dropdown-item text-white" href="#">Les locomotives</a></li>
             <li><a class="dropdown-item text-white" href="#">Les voitures de voyageurs</a></li>
             <li><a class="dropdown-item text-white" href="#">Les automotrices</a></li>
