--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -8,7 +8,7 @@
             Nos produits
           </a>
           <ul class="dropdown-menu dropdown-menu-dark" style="background-color: #0E2E45;">
-            <li><a class="dropdown-item text-white"href={{path('acceuil_index')}}>Les matériels roulants</a></li>
+            <li><a class="dropdown-item text-white"href={{path('MaterielRoulant_matRoulant')}}>Les matériels roulants</a></li>
             <li><a class="dropdown-item text-white" href="#">Les locomotives</a></li>
             <li><a class="dropdown-item text-white" href="#">Les voitures de voyageurs</a></li>
             <li><a class="dropdown-item text-white" href="#">Les automotrices</a></li>
