--- a/public/CSS/MaterielRoulants.css
+++ b/public/CSS/MaterielRoulants.css
@@ -1,6 +1,8 @@
 /* Titre de la page */
 h1{
     text-decoration: underline;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 /* Style global de la section principale */
@@ -17,7 +19,7 @@ h1{
     display: flex;
     justify-content: center;
     gap: 100px; /* Espace entre les blocs */
-    margin: 20px 0;
+    margin: 30px 0;
 }
 
 /* Style commun pour chaque bloc d'image + texte */
