--- a/templates/locomotives/locomotives.html.twig
+++ b/templates/locomotives/locomotives.html.twig
@@ -17,48 +17,66 @@
     <h1>Les {{categorie.nom}} </h1>
     {% endfor %}
     {% for pageproduit in TypeLocoDiesel %}
-        <div class="LocoDiesel">
-            <div class="DTailleG">
-                <a href={{ path('app_produits') }}> <img src={{ asset('Images/PageProduits/Locomotives/Diesel/') ~ pageproduit.tailleG }} alt="Locomotivedieselg" id="LocoDieselG"></a>
-                <p>Locomotive diesel taille G</p>
+            <div class="ImagesLigne1">
+                <div class="LocoDieselG">
+                    <a href={{ path('app_produits') }}> <img src={{ asset('Images/PageProduits/Locomotives/Diesel/') ~ pageproduit.tailleG }} alt="Locomotivedieselg" id="LocoDieselG"></a>
+                    <p>Locomotive diesel taille G</p>
+                </div>
+                <div class="LocoDieselN">
+                    <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Diesel/') ~ pageproduit.tailleN }} alt="Locomotivedieseln" id="LocoDieselN"></a>
+                    <p>Locomotive diesel taille N</p>
+                </div>
+                <div class="LocoDieselZ">
+                    <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Diesel/') ~ pageproduit.tailleZ }} alt="Locomotivedieselz" id="LocoDieselZ"></a>
+                    <p>Locomotive diesel taille Z</p>
+                </div>
             </div>
-            <div class="DTailleN">
-                <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Diesel/') ~ pageproduit.tailleN }} alt="Locomotivedieseln" id="LocoDieselN"></a>
-                <p>Locomotive diesel taille N</p>
+            <div class="ImagesLigne2">
+                <div class="LocoDieselHO">
+                    <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Diesel/') ~ pageproduit.tailleHo }} alt="Locomotivedieselho" id="LocoDieselHO"></a>
+                    <p>Locomotive diesel taille HO</p>
+                </div>
+                {% endfor %}
+                {% for pageproduit in TypeLocoElec %}
+                <div class="LocoElecG">
+                    <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Elec/') ~ pageproduit.tailleG }} alt="LocomotiveElecg" id="LocomotivesElec"></a>
+                    <p>Locomotive Elec taille G</p>
+                </div>
+                <div class="LocoElecN">
+                    <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Elec/') ~ pageproduit.tailleN }} alt="LocomotiveElecn" id="LocomotivesElec"></a>
+                    <p>Locomotive Elec taille N</p>
+                </div>
             </div>
-            <div class="DTailleZ">
-                <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Diesel/') ~ pageproduit.tailleZ }} alt="Locomotivedieselz" id="LocoDieselZ"></a>
-                <p>Locomotive diesel taille Z</p>
+            <div class="ImagesLigne3">
+                <div class="LocoElecZ">
+                    <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Elec/') ~ pageproduit.tailleZ }} alt="LocomotiveElecz" id="LocomotivesElec"></a>
+                    <p>Locomotive Elec taille Z</p>
+                </div>
+                <div class="LocoElecHO">
+                    <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Elec/') ~ pageproduit.tailleHo }} alt="LocomotiveElecho" id="LocomotivesElec"></a>
+                    <p>Locomotive Elec taille HO</p>
+                </div>
+                {% endfor %}
+                {% for pageproduit in TypeLocoVapeur %}
+                <div class="LocoVapeurG">
+                    <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Vapeur/') ~ pageproduit.tailleG }} alt="LocomotiveVapeurg" id="LocomotivesVapeur"></a>
+                    <p>Locomotive vapeur taille G</p>
+                </div>
             </div>
-            <div class="DTailleHO">
-                <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Diesel/') ~ pageproduit.tailleHo }} alt="Locomotivedieselho" id="LocoDieselHO"></a>
-                <p>Locomotive diesel taille HO</p>
+            <div class="ImagesLigne4">
+                <div class="LocoVapeurN">
+                    <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Vapeur/') ~ pageproduit.tailleN }} alt="LocomotiveVapeurn" id="LocomotivesVapeur"></a>
+                    <p>Locomotive vapeur taille N</p>
+                </div>
+                <div class="LocoVapeurZ">
+                    <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Vapeur/') ~ pageproduit.tailleZ }} alt="LocomotiveVapeurz" id="LocomotivesVapeur"></a>
+                    <p>Locomotive vapeur taille Z</p>
+                </div>
+                <div class="LocoVapeurHO">
+                    <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Vapeur/') ~ pageproduit.tailleHo }} alt="LocomotiveVapeurho" id="LocomotivesVapeur"></a>
+                    <p>Locomotive vapeur taille HO</p>
+                </div>
             </div>
-        </div>
-    {% endfor %}
-    {% for pageproduit in TypeLocoElec %}
-        <div class="LocoElec">
-           <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Elec/') ~ pageproduit.tailleG }} alt="LocomotiveElecg" id="LocomotivesElec"></a>
-           <p>Locomotive Elec taille G</p>
-           <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Elec/') ~ pageproduit.tailleN }} alt="LocomotiveElecn" id="LocomotivesElec"></a>
-           <p>Locomotive Elec taille N</p>
-           <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Elec/') ~ pageproduit.tailleZ }} alt="LocomotiveElecz" id="LocomotivesElec"></a>
-           <p>Locomotive Elec taille Z</p>
-           <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Elec/') ~ pageproduit.tailleHo }} alt="LocomotiveElecho" id="LocomotivesElec"></a>
-           <p>Locomotive Elec taille HO</p>
-        </div>
-    {% endfor %}
-    {% for pageproduit in TypeLocoVapeur %}
-        <div class="LocoVapeur">
-           <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Vapeur/') ~ pageproduit.tailleG }} alt="LocomotiveVapeurg" id="LocomotivesVapeur"></a>
-           <p>Locomotive vapeur taille G</p>
-           <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Vapeur/') ~ pageproduit.tailleN }} alt="LocomotiveVapeurn" id="LocomotivesVapeur"></a>
-           <p>Locomotive vapeur taille N</p>
-           <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Vapeur/') ~ pageproduit.tailleZ }} alt="LocomotiveVapeurz" id="LocomotivesVapeur"></a>
-           <p>Locomotive vapeur taille Z</p>
-           <a href={{ path('Locomotives_typelocos') }}> <img src={{ asset('Images/PageProduits/Locomotives/Vapeur/') ~ pageproduit.tailleHo }} alt="LocomotiveVapeurho" id="LocomotivesVapeur"></a>
-           <p>Locomotive vapeur taille HO</p>
-        </div>
     {% endfor %}
 </body>
 
