Ajout des pages produits des locomotives tous types et toutes tailles, avec css

--- a/public/CSS/ProduitLocos.css
+++ b/public/CSS/ProduitLocos.css
@@ -23,18 +23,27 @@
                 /* Fin Balise titre */
              /* Div class titre */
              /* Paragraphe a droite de l'image */
-                .droiteGDiesel a{
+                .droiteGDiesel a,
+                .droiteNDiesel a,
+                .droiteZDiesel a,
+                .droiteHODiesel a{
                     color: black;
                 }
                 /* classe droite */
-                .droiteGDiesel{
+                .droiteGDiesel,
+                .droiteNDiesel,
+                .droiteZDiesel,
+                .droiteHODiesel{
                     padding-left: 50%;
                     font-size: 24px;
                 }
             /* Fin Paragraphe a droite de l'image */
         /* Fin Titre de la page */
         /* Description*/
-        .descriptionGDiesel{
+        .descriptionGDiesel,
+        .descriptionNDiesel,
+        .descriptionZDiesel,
+        .descriptionHODiesel{
             border: 5px black solid;
             padding-left: 20px;
             padding-top: 10px;
@@ -43,7 +52,10 @@
             margin: 50px auto;
         }
         /* paragraphe de la classe description */
-        .descriptionGDiesel p{
+        .descriptionGDiesel p,
+        .descriptionNDiesel p,
+        .descriptionZDiesel p,
+        .descriptionHODiesel p{
             font-size: 24px;
         }
         /* titre de la description */
@@ -51,13 +63,225 @@
                 text-decoration: underline;
             }
     /* Fin Description */
-            /* Image */
-                /* Vue1 */
-                    #LocoDieselTailleGVue1{
-                        width: 40%;
-                        height: auto;
-                    }
-                /* Fin Vue1 */
-            /* Fin Image */
     /* Fin Locomotive Diesel Taille G */
+    /* Locos Elec  toutes tailles */
+     /* Paragraphe a droite de l'image */
+                .droiteGElec a,
+                .droiteNElec a,
+                .droiteZElec a,
+                .droiteHOElec a{
+                    color: black;
+                }
+                /* classe droite */
+                .droiteGElec,
+                .droiteNElec,
+                .droiteZElec,
+                .droiteHOElec{
+                    padding-left: 50%;
+                    font-size: 24px;
+                }
+            /* Fin Paragraphe a droite de l'image */
+        /* Fin Titre de la page */
+        /* Description*/
+        .descriptionZElec,
+        .descriptionNElec,
+        .descriptionGElec{
+            border: 5px black solid;
+            padding-left: 20px;
+            padding-top: 10px;
+            width: 90%;
+            height: 165px;
+            margin: 90px auto;
+        }
+
+         .descriptionHOElec{
+            border: 5px black solid;
+            padding-left: 20px;
+            padding-top: 10px;
+            width: 90%;
+            height: 135px;
+            margin: 95px auto;
+         }
+        
+        /* paragraphe de la classe description */
+        .descriptionGElec p,
+        .descriptionNElec p,
+        .descriptionZElec p,
+        .descriptionHOElec p{
+            font-size: 24px;
+        }
+        /* titre de la description */
+            .titre_description{
+                text-decoration: underline;
+            }
+    /* Fin Description */
+    /* Locos Vapeur  toutes tailles */
+     /* Paragraphe a droite de l'image */
+                .droiteGVapeur a,
+                .droiteNVapeur a,
+                .droiteZVapeur a,
+                .droiteHOVapeur a{
+                    color: black;
+                }
+                /* classe droite */
+                .droiteGVapeur,
+                .droiteNVapeur,
+                .droiteZVapeur,
+                .droiteHOVapeur{
+                    padding-left: 50%;
+                    font-size: 24px;
+                }
+            /* Fin Paragraphe a droite de l'image */
+        /* Fin Titre de la page */
+        /* Description*/
+        .descriptionGVapeur,
+        .descriptionNVapeur,
+        .descriptionZVapeur,
+        .descriptionHOVapeur{
+            border: 5px black solid;
+            padding-left: 20px;
+            padding-top: 10px;
+            width: 86%;
+            height: 135px;
+            margin: 50px auto;
+        }
+        /* paragraphe de la classe description */
+        .descriptionGVapeur p,
+        .descriptionNVapeur p,
+        .descriptionZVapeur p,
+        .descriptionHOVapeur p{
+            font-size: 24px;
+        }
+        /* titre de la description */
+            .titre_description{
+                text-decoration: underline;
+            }
+    /* Fin Description */
 /* Fin Page Produits Locomotives */
+/* Image seule */
+#LocoDieselTailleGVue1{
+    width: 40%;
+}
+#LocoElecTailleGVue1{
+    width: 40%;
+}
+#LocoElecTailleHOVue1{
+    width: 50%;
+}
+
+/* Carrousel */
+#LocoDieselTailleNVue1,
+#LocoDieselTailleNVue2{
+    width: 100%;
+}
+#LocoDieselTailleZVue1,
+#LocoDieselTailleZVue2{
+    width: 100%;
+}
+#LocoDieselTailleHOVue1,
+#LocoDieselTailleHOVue2,
+#LocoDieselTailleHOVue3{
+    width: 100%;
+}
+#LocoElecTailleNVue1,
+#LocoElecTailleNVue2{
+    width: 80%;
+}
+#LocoElecTailleZVue1,
+#LocoElecTailleZVue2{
+    width: 100%;
+}
+/* Image locos vapeur pour carrousel */
+#LocoVapeurTailleGVue1,
+#LocoVapeurTailleGVue2,
+#LocoVapeurTailleGVue3{
+    width: 100%;
+}
+#LocoVapeurTailleHOVue1,
+#LocoVapeurTailleHOVue2,
+#LocoVapeurTailleHOVue3{
+    width: 100%;
+}
+#LocoVapeurTailleNVue1,
+#LocoVapeurTailleNVue2,
+#LocoVapeurTailleNVue3{
+    width: 100%;
+}
+#LocoVapeurTailleZVue1,
+#LocoVapeurTailleZVue2,
+#LocoVapeurTailleZVue3{
+    width: 100%;
+}
+
+
+main{
+    width: 50%;
+    /* margin: auto; */
+    position: relative;
+}
+
+#carrousel{
+    border: 5px solid black;
+
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 100%;
+    gap: 2rem;
+    overflow-x: auto;
+
+    scrollbar-color: transparent transparent;
+    padding: 1rem;
+    padding-bottom: 0;
+    scroll-snap-type: x mandatory;
+
+    @media (prefers-reduced-motion: no-preference){
+        scroll-behavior: smooth;
+    }
+
+    scroll-marker-group:after;
+
+    &::scroll-marker-group{
+        display: flex;
+        justify-content: center;
+        gap: 0.5rem;
+        padding: 0.5rem;
+    }
+
+    figure{
+        margin: 0;
+        scroll-snap-align: center;
+        position: relative;
+        &::scroll-marker{
+            content: " ";
+            border: 2px solid black;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+        }
+        &::scroll-marker:target-current{
+            background-color: grey;
+        }
+
+    }
+    &::scroll-button(*){
+        background-color: rgba(255, 255, 255, 0.7);
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        border: none;
+        font-size: 2rem;
+        width: 2rem;
+        height: 2rem;
+        border-radius: 50%;
+
+    }
+    &::scroll-button(right){
+        content: ">";
+        right: 20px;
+    }
+    &::scroll-button(left){
+        content: "<";
+        left: 20px;
+    }
+
+}
