--- a/public/CSS/ProduitLocos.css
+++ b/public/CSS/ProduitLocos.css
@@ -1,287 +1,264 @@
-/* Page Produits Locomotives */
-    /* Locomotive Diesel Taille G */
-        /* Titre de la page */
-            /* Div class titre */
-                .titre{
-                display: flex;
-                flex-direction: row;
-                }
-                /* Lien dans la class titre => Retour vers les types de locomotives */
-                .titre a{
-                    padding-right: 23%;
-                    padding-left: 3%;
-                    padding-top: 1%;
-                    color: black;
-                    text-decoration: none;
-                }
-                /* Fin Lien dans la class titre */
-                /* Balise titre */
-                h1{
-                    text-decoration: underline;
-                    padding-top: 2%;
-                }
-                /* Fin Balise titre */
-             /* Div class titre */
-             /* Paragraphe a droite de l'image */
-                .droiteGDiesel a,
-                .droiteNDiesel a,
-                .droiteZDiesel a,
-                .droiteHODiesel a{
-                    color: black;
-                }
-                /* classe droite */
-                .droiteGDiesel,
-                .droiteNDiesel,
-                .droiteZDiesel,
-                .droiteHODiesel{
-                    padding-left: 50%;
-                    font-size: 24px;
-                }
-            /* Fin Paragraphe a droite de l'image */
-        /* Fin Titre de la page */
-        /* Description*/
-        .descriptionGDiesel,
-        .descriptionNDiesel,
-        .descriptionZDiesel,
-        .descriptionHODiesel{
-            border: 5px black solid;
-            padding-left: 20px;
-            padding-top: 10px;
-            width: 86%;
-            height: 135px;
-            margin: 50px auto;
-        }
-        /* paragraphe de la classe description */
-        .descriptionGDiesel p,
-        .descriptionNDiesel p,
-        .descriptionZDiesel p,
-        .descriptionHODiesel p{
-            font-size: 24px;
-        }
-        /* titre de la description */
-            .titre_description{
-                text-decoration: underline;
-            }
-    /* Fin Description */
-    /* Fin Locomotive Diesel Taille G */
-    /* Locos Elec  toutes tailles */
-     /* Paragraphe a droite de l'image */
-                .droiteGElec a,
-                .droiteNElec a,
-                .droiteZElec a,
-                .droiteHOElec a{
-                    color: black;
-                }
-                /* classe droite */
-                .droiteGElec,
-                .droiteNElec,
-                .droiteZElec,
-                .droiteHOElec{
-                    padding-left: 50%;
-                    font-size: 24px;
-                }
-            /* Fin Paragraphe a droite de l'image */
-        /* Fin Titre de la page */
-        /* Description*/
-        .descriptionZElec,
-        .descriptionNElec,
-        .descriptionGElec{
-            border: 5px black solid;
-            padding-left: 20px;
-            padding-top: 10px;
-            width: 90%;
-            height: 165px;
-            margin: 90px auto;
-        }
+/* Style commun a toutes les pages produits */
+.titre{
+display: flex;
+flex-direction: row;
+}
+.titre a{
+padding-right: 23%;
+padding-left: 3%;
+padding-top: 1%;
+color: black;
+text-decoration: none;
+}
+h1{
+text-decoration: underline;
+padding-top: 2%;
+}
+.titre_description{
+text-decoration: underline;
+}
+/* Fin Style commun */
+/* Concerne Les pages Produits Locomotives Diesel */
+.droiteGDiesel a,
+.droiteNDiesel a,
+.droiteZDiesel a,
+.droiteHODiesel a{
+color: black;
+}
 
-         .descriptionHOElec{
-            border: 5px black solid;
-            padding-left: 20px;
-            padding-top: 10px;
-            width: 90%;
-            height: 135px;
-            margin: 95px auto;
-         }
-        
-        /* paragraphe de la classe description */
-        .descriptionGElec p,
-        .descriptionNElec p,
-        .descriptionZElec p,
-        .descriptionHOElec p{
-            font-size: 24px;
-        }
-        /* titre de la description */
-            .titre_description{
-                text-decoration: underline;
-            }
-    /* Fin Description */
-    /* Locos Vapeur  toutes tailles */
-     /* Paragraphe a droite de l'image */
-                .droiteGVapeur a,
-                .droiteNVapeur a,
-                .droiteZVapeur a,
-                .droiteHOVapeur a{
-                    color: black;
-                }
-                /* classe droite */
-                .droiteGVapeur,
-                .droiteNVapeur,
-                .droiteZVapeur,
-                .droiteHOVapeur{
-                    padding-left: 50%;
-                    font-size: 24px;
-                }
-            /* Fin Paragraphe a droite de l'image */
-        /* Fin Titre de la page */
-        /* Description*/
-        .descriptionGVapeur,
-        .descriptionNVapeur,
-        .descriptionZVapeur,
-        .descriptionHOVapeur{
-            border: 5px black solid;
-            padding-left: 20px;
-            padding-top: 10px;
-            width: 86%;
-            height: 135px;
-            margin: 50px auto;
-        }
-        /* paragraphe de la classe description */
-        .descriptionGVapeur p,
-        .descriptionNVapeur p,
-        .descriptionZVapeur p,
-        .descriptionHOVapeur p{
-            font-size: 24px;
-        }
-        /* titre de la description */
-            .titre_description{
-                text-decoration: underline;
-            }
-    /* Fin Description */
-/* Fin Page Produits Locomotives */
+.droiteGDiesel,
+.droiteNDiesel,
+.droiteZDiesel,
+.droiteHODiesel{
+padding-left: 50%;
+font-size: 24px;
+}
+
+.descriptionGDiesel,
+.descriptionNDiesel,
+.descriptionZDiesel,
+.descriptionHODiesel{
+border: 5px black solid;
+padding-left: 20px;
+padding-top: 10px;
+width: 86%;
+height: 135px;
+margin: 50px auto;
+}
+.descriptionGDiesel p,
+.descriptionNDiesel p,
+.descriptionZDiesel p,
+.descriptionHODiesel p{
+font-size: 24px;
+}
+
+
+/* Concerne Les pages Produits Locomotives Elec */
+.droiteGElec a,
+.droiteNElec a,
+.droiteZElec a,
+.droiteHOElec a{
+color: black;
+}
+
+.droiteGElec,
+.droiteNElec,
+.droiteZElec,
+.droiteHOElec{
+padding-left: 50%;
+font-size: 24px;
+}
+
+.descriptionZElec,
+.descriptionNElec,
+.descriptionGElec{
+border: 5px black solid;
+padding-left: 20px;
+padding-top: 10px;
+width: 90%;
+height: 165px;
+margin: 90px auto;
+}
+
+.descriptionHOElec{
+border: 5px black solid;
+padding-left: 20px;
+padding-top: 10px;
+width: 90%;
+height: 135px;
+margin: 95px auto;
+}
+
+
+.descriptionGElec p,
+.descriptionNElec p,
+.descriptionZElec p,
+.descriptionHOElec p{
+font-size: 24px;
+}
+
+/* Loco Vapeur */
+.droiteGVapeur a,
+.droiteNVapeur a,
+.droiteZVapeur a,
+.droiteHOVapeur a{
+color: black;
+}
+/* classe droite */
+.droiteGVapeur,
+.droiteNVapeur,
+.droiteZVapeur,
+.droiteHOVapeur{
+padding-left: 50%;
+font-size: 24px;
+}
+
+.descriptionGVapeur,
+.descriptionNVapeur,
+.descriptionZVapeur,
+.descriptionHOVapeur{
+border: 5px black solid;
+padding-left: 20px;
+padding-top: 10px;
+width: 86%;
+height: 135px;
+margin: 50px auto;
+}
+
+.descriptionGVapeur p,
+.descriptionNVapeur p,
+.descriptionZVapeur p,
+.descriptionHOVapeur p{
+font-size: 24px;
+}
+
+
 /* Image seule */
 #LocoDieselTailleGVue1{
-    width: 40%;
+width: 40%;
 }
 #LocoElecTailleGVue1{
-    width: 40%;
+width: 40%;
 }
 #LocoElecTailleHOVue1{
-    width: 50%;
+width: 50%;
 }
 
 /* Carrousel */
+/* Image locos Diesel pour carrousel */
 #LocoDieselTailleNVue1,
 #LocoDieselTailleNVue2{
-    width: 100%;
+width: 100%;
 }
 #LocoDieselTailleZVue1,
 #LocoDieselTailleZVue2{
-    width: 100%;
+width: 100%;
 }
 #LocoDieselTailleHOVue1,
 #LocoDieselTailleHOVue2,
 #LocoDieselTailleHOVue3{
-    width: 100%;
+width: 100%;
 }
+/* Image locos Elec pour carrousel */
 #LocoElecTailleNVue1,
 #LocoElecTailleNVue2{
-    width: 80%;
+width: 80%;
 }
 #LocoElecTailleZVue1,
 #LocoElecTailleZVue2{
-    width: 100%;
+width: 100%;
 }
 /* Image locos vapeur pour carrousel */
 #LocoVapeurTailleGVue1,
 #LocoVapeurTailleGVue2,
 #LocoVapeurTailleGVue3{
-    width: 100%;
+width: 100%;
 }
 #LocoVapeurTailleHOVue1,
 #LocoVapeurTailleHOVue2,
 #LocoVapeurTailleHOVue3{
-    width: 100%;
+width: 100%;
 }
 #LocoVapeurTailleNVue1,
 #LocoVapeurTailleNVue2,
 #LocoVapeurTailleNVue3{
-    width: 100%;
+width: 100%;
 }
 #LocoVapeurTailleZVue1,
 #LocoVapeurTailleZVue2,
 #LocoVapeurTailleZVue3{
-    width: 100%;
+width: 100%;
 }
 
 
 main{
-    width: 50%;
-    /* margin: auto; */
-    position: relative;
+width: 50%;
+/* margin: auto; */
+position: relative;
 }
 
 #carrousel{
-    border: 5px solid black;
+border: 5px solid black;
 
-    display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: 100%;
-    gap: 2rem;
-    overflow-x: auto;
+display: grid;
+grid-auto-flow: column;
+grid-auto-columns: 100%;
+gap: 2rem;
+overflow-x: auto;
 
-    scrollbar-color: transparent transparent;
-    padding: 1rem;
-    padding-bottom: 0;
-    scroll-snap-type: x mandatory;
+scrollbar-color: transparent transparent;
+padding: 1rem;
+padding-bottom: 0;
+scroll-snap-type: x mandatory;
 
-    @media (prefers-reduced-motion: no-preference){
-        scroll-behavior: smooth;
-    }
+@media (prefers-reduced-motion: no-preference){
+scroll-behavior: smooth;
+}
 
-    scroll-marker-group:after;
+scroll-marker-group:after;
 
-    &::scroll-marker-group{
-        display: flex;
-        justify-content: center;
-        gap: 0.5rem;
-        padding: 0.5rem;
-    }
+&::scroll-marker-group{
+display: flex;
+justify-content: center;
+gap: 0.5rem;
+padding: 0.5rem;
+}
 
-    figure{
-        margin: 0;
-        scroll-snap-align: center;
-        position: relative;
-        &::scroll-marker{
-            content: " ";
-            border: 2px solid black;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-        }
-        &::scroll-marker:target-current{
-            background-color: grey;
-        }
+figure{
+margin: 0;
+scroll-snap-align: center;
+position: relative;
+&::scroll-marker{
+content: " ";
+border: 2px solid black;
+width: 20px;
+height: 20px;
+border-radius: 50%;
+}
+&::scroll-marker:target-current{
+background-color: grey;
+}
 
-    }
-    &::scroll-button(*){
-        background-color: rgba(255, 255, 255, 0.7);
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        border: none;
-        font-size: 2rem;
-        width: 2rem;
-        height: 2rem;
-        border-radius: 50%;
+}
+&::scroll-button(*){
+background-color: rgba(255, 255, 255, 0.7);
+position: absolute;
+top: 50%;
+transform: translateY(-50%);
+border: none;
+font-size: 2rem;
+width: 2rem;
+height: 2rem;
+border-radius: 50%;
 
-    }
-    &::scroll-button(right){
-        content: ">";
-        right: 20px;
-    }
-    &::scroll-button(left){
-        content: "<";
-        left: 20px;
-    }
+}
+&::scroll-button(right){
+content: ">";
+right: 20px;
+}
+&::scroll-button(left){
+content: "<";
+left: 20px;
+}
 
 }
