--- a/templates/produits/Locos/Vapeur/VapeurN.html.twig
+++ b/templates/produits/Locos/Vapeur/VapeurN.html.twig
@@ -17,7 +17,7 @@
 		<body>
 				<div
 					class="titre">
-					<a href={{ path('Locomotives_typelocos') }}>Retour vers les types de locomotives</a>
+					<a href={{ path('TypeProduit_Locomotives') }}>Retour vers les types de locomotives</a>
 					{% for Produits in LocoVapeurN %}
 						<h1>{{Produits.NomProduit}}</h1>
 					</div>
