--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -9,10 +9,10 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-dark" style="background-color: #0E2E45;">
             <li><a class="dropdown-item text-white"href={{path('MaterielRoulant_matRoulant')}}>Les matériels roulants</a></li>
-            <li><a class="dropdown-item text-white" href="#">Les locomotives</a></li>
-            <li><a class="dropdown-item text-white" href="#">Les voitures de voyageurs</a></li>
-            <li><a class="dropdown-item text-white" href="#">Les automotrices</a></li>
-            <li><a class="dropdown-item text-white" href="#">Les wagons de fret</a></li>
+            <li><a class="dropdown-item text-white" href={{path('TypeProduit_Locomotives')}}>Les locomotives</a></li> 
+            <li><a class="dropdown-item text-white" href={{path('MaterielRoulant_matRoulant')}}>Les voitures de voyageurs</a></li>
+            <li><a class="dropdown-item text-white" href={{path('MaterielRoulant_matRoulant')}}>Les automotrices</a></li>
+            <li><a class="dropdown-item text-white" href={{path('TypeProduit_WagonFret')}}>Les wagons de fret</a></li>
           </ul>
         </li>
 
