ajout de lien sur la page type wagons de fret

--- a/templates/TypeProduits/WagonFret.html.twig
+++ b/templates/TypeProduits/WagonFret.html.twig
@@ -19,61 +19,61 @@
     {% for pageproduit in TypeWagonFretBache %}
             <div class="ImagesLigne1">
                 <div class="WagonBacheG">
-                    <a href={{ path('produits_dieselG') }}> <img src={{ asset('Images/PageProduits/WagonFret/Bache/') ~ pageproduit.tailleG }} alt="WagonBacheG" id="WagonBacheG"></a>
+                    <a href={{ path('produits_bacheG') }}> <img src={{ asset('Images/PageProduits/WagonFret/Bache/') ~ pageproduit.tailleG }} alt="WagonBacheG" id="WagonBacheG"></a>
                     <p>Wagon Bache taille G</p>
                 </div>
                 <div class="WagonBacheN">
-                    <a href={{ path('produits_dieselN') }}> <img src={{ asset('Images/PageProduits/WagonFret/Bache/') ~ pageproduit.tailleN }} alt="WagonBacheN" id="WagonBacheN"></a>
+                    <a href={{ path('produits_bacheN') }}> <img src={{ asset('Images/PageProduits/WagonFret/Bache/') ~ pageproduit.tailleN }} alt="WagonBacheN" id="WagonBacheN"></a>
                     <p>Wagon Bache taille N</p>
                 </div>
                 <div class="WagonBacheZ">
-                    <a href={{ path('produits_dieselZ') }}> <img src={{ asset('Images/PageProduits/WagonFret/Bache/') ~ pageproduit.tailleZ }} alt="WagonBacheZ" id="WagonBacheZ"></a>
+                    <a href={{ path('produits_bacheZ') }}> <img src={{ asset('Images/PageProduits/WagonFret/Bache/') ~ pageproduit.tailleZ }} alt="WagonBacheZ" id="WagonBacheZ"></a>
                     <p>Wagon Bache taille Z</p>
                 </div>
             </div>
             <div class="ImagesLigne2">
                 <div class="WagonBacheHO">
-                    <a href={{ path('produits_dieselHO') }}> <img src={{ asset('Images/PageProduits/WagonFret/Bache/') ~ pageproduit.tailleHo }} alt="WagonBacheHO" id="WagonBacheHO"></a>
+                    <a href={{ path('produits_bacheHO') }}> <img src={{ asset('Images/PageProduits/WagonFret/Bache/') ~ pageproduit.tailleHo }} alt="WagonBacheHO" id="WagonBacheHO"></a>
                     <p>Wagon Bache taille HO</p>
                 </div>
                 {% endfor %}
                 {% for pageproduit in TypeWagonFretPlatRebord %}
                 <div class="WagonRebordG">
-                    <a href={{ path('produits_ElecG') }}> <img src={{ asset('Images/PageProduits/WagonFret/Rebord/') ~ pageproduit.tailleG }} alt="WagonRebordG" id="WagonRebordG"></a>
+                    <a href={{ path('produits_rebordG') }}> <img src={{ asset('Images/PageProduits/WagonFret/Rebord/') ~ pageproduit.tailleG }} alt="WagonRebordG" id="WagonRebordG"></a>
                     <p>Wagon Plat à Rebord en taille G</p>
                 </div>
                 <div class="WagonRebordN">
-                    <a href={{ path('produits_ElecN') }}> <img src={{ asset('Images/PageProduits/WagonFret/Rebord/') ~ pageproduit.tailleN }} alt="WagonRebordN" id="WagonRebordN"></a>
+                    <a href={{ path('produits_rebordN') }}> <img src={{ asset('Images/PageProduits/WagonFret/Rebord/') ~ pageproduit.tailleN }} alt="WagonRebordN" id="WagonRebordN"></a>
                     <p>Wagon Plat à Rebord en taille N</p>
                 </div>
             </div>
             <div class="ImagesLigne3">
                 <div class="WagonRebordZ">
-                    <a href={{ path('produits_ElecZ') }}> <img src={{ asset('Images/PageProduits/WagonFret/Rebord/') ~ pageproduit.tailleZ }} alt="WagonRebordZ" id="WagonRebordZ"></a>
+                    <a href={{ path('produits_rebordZ') }}> <img src={{ asset('Images/PageProduits/WagonFret/Rebord/') ~ pageproduit.tailleZ }} alt="WagonRebordZ" id="WagonRebordZ"></a>
                     <p>Wagon Plat à Rebord en taille Z</p>
                 </div>
                 <div class="WagonRebordHO">
-                    <a href={{ path('produits_ElecHO') }}> <img src={{ asset('Images/PageProduits/WagonFret/Rebord/') ~ pageproduit.tailleHo }} alt="WagonRebordHO" id="WagonRebordHO"></a>
+                    <a href={{ path('produits_rebordHO') }}> <img src={{ asset('Images/PageProduits/WagonFret/Rebord/') ~ pageproduit.tailleHo }} alt="WagonRebordHO" id="WagonRebordHO"></a>
                     <p>Wagon Plat à Rebord en taille HO</p>
                 </div>
                 {% endfor %}
                 {% for pageproduit in TypeWagonsFretCouvert %}
                 <div class="WagonCouvertG">
-                    <a href={{ path('produits_VapeurG') }}> <img src={{ asset('Images/PageProduits/WagonFret/Couvert/') ~ pageproduit.tailleG }} alt="WagonCouvertG" id="WagonCouvertG"></a>
+                    <a href={{ path('produits_couvertG') }}> <img src={{ asset('Images/PageProduits/WagonFret/Couvert/') ~ pageproduit.tailleG }} alt="WagonCouvertG" id="WagonCouvertG"></a>
                     <p>Wagon Couvert en taille G</p>
                 </div>
             </div>
             <div class="ImagesLigne4">
                 <div class="WagonCouvertN">
-                    <a href={{ path('produits_VapeurN') }}> <img src={{ asset('Images/PageProduits/WagonFret/Couvert/') ~ pageproduit.tailleN }} alt="WagonCouvertN" id="WagonCouvertN"></a>
+                    <a href={{ path('produits_couvertN') }}> <img src={{ asset('Images/PageProduits/WagonFret/Couvert/') ~ pageproduit.tailleN }} alt="WagonCouvertN" id="WagonCouvertN"></a>
                     <p>Wagon Couvert en taille N</p>
                 </div>
                 <div class="WagonCouvertZ">
-                    <a href={{ path('produits_VapeurZ') }}> <img src={{ asset('Images/PageProduits/WagonFret/Couvert/') ~ pageproduit.tailleZ }} alt="WagonCouvertZ" id="WagonCouvertZ"></a>
+                    <a href={{ path('produits_couvertZ') }}> <img src={{ asset('Images/PageProduits/WagonFret/Couvert/') ~ pageproduit.tailleZ }} alt="WagonCouvertZ" id="WagonCouvertZ"></a>
                     <p>Wagon Couvert en taille Z</p>
                 </div>
                 <div class="WagonCouvertHO">
-                    <a href={{ path('produits_VapeurHO') }}> <img src={{ asset('Images/PageProduits/WagonFret/Couvert/') ~ pageproduit.tailleHo }} alt="WagonCouvertHO" id="WagonCouvertHO"></a>
+                    <a href={{ path('produits_couvertHO') }}> <img src={{ asset('Images/PageProduits/WagonFret/Couvert/') ~ pageproduit.tailleHo }} alt="WagonCouvertHO" id="WagonCouvertHO"></a>
                     <p>Wagon Couvert en taille HO</p>
                 </div>
             </div>
